# mu2e-pcie-utils

./: .gitignore  CMakeLists.txt  README.md  dkms.conf  driver_test.sh  setup_dkms.sh
cfoInterfaceLib/: CFO.cpp  CFO.h  CFO_Compiler.cpp  CFO_Compiler.hh  CFO_Registers.cpp  CFO_Registers.h  CMakeLists.txt  cfoRegDump.cc  mu2eCompiler.cc  util_main.cc
cfoInterfaceLib/python/: CMakeLists.txt  cfoInterfaceLib.i  test.py
cfoInterfaceLib/root/: CMakeLists.txt  classes.h
dtcInterfaceLib/: CFOandDTC_DMAs.cpp  CFOandDTC_DMAs.h  CFOandDTC_Registers.cpp  CFOandDTC_Registers.h  CMakeLists.txt  DTC.cpp  DTC.h  DTCLibTest.cpp  DTCLibTest.h  DTCSoftwareCFO.cpp  DTCSoftwareCFO.h  DTC_Data_Verifier.h  DTC_Registers.cpp  DTC_Registers.h  DTC_binary_file_compare.cc  JAConfig.sh  Mu2eUtil.cpp  Mu2eUtil.h  Setup_DTC.sh  binary_dump_to_DTC_file.cc  data_file_verifier.cc  dcs_main.cc  dtcRegDump.cc  mu2edev.cpp  mu2edev.h  mu2esim.cpp  mu2esim.h  my_cntl.cc  otsStyleCoutMacros.cpp  otsStyleCoutMacros.h  util_main.cc
dtcInterfaceLib/python/: CMakeLists.txt  dtcInterfaceLib.i  test.py
dtcInterfaceLib/root/: CMakeLists.txt  classes.h
dtcInterfaceLib/test/: CMakeLists.txt  fragmentTester.h  packetGenerator.cc  packetReader.cc
mcs/: CMakeLists.txt  mcs.sh
mcs/basic_driver/: pci_devel_main.c  pcidevl_ioctl.h
mu2e_driver/: CMakeLists.txt  mu2e_event.c  mu2e_event.h  mu2e_fs.c  mu2e_fs.h  mu2e_main.c  mu2e_mem.c  mu2e_mem.h  mu2e_mmap_ioctl.h  mu2e_pci.c  mu2e_pci.h  mu2e_proto_globals.h  xdma_hw.h
tools/: make_test_file.sh  switch_test.sh
